--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.4",
+    "google-fonts-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
     "tests": "^0.4.2",
@@ -26,10 +27,12 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "material-ui": "^1.0.0-beta.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6"
   }
