--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "material-ui": "^1.0.0-beta.3",
+    "material-ui": "^1.0.0-beta.4",
     "material-ui-icons": "^1.0.0-alpha.19",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
