--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
     "redux-saga": "^0.15.6"
   }
 }
