--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "prod": "webpack -p"
+    "prod": "webpack -p",
+    "deps": "webpack --config=webpack.dll.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "cache-loader": "^1.0.3",
     "css-loader": "^0.28.4",
     "google-fonts-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^2.30.1",
