--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
-    "redux-saga": "^0.15.6"
+    "redux-saga": "^0.15.6",
+    "styled-components": "^2.1.2"
   }
 }
